--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.39.1"
+    "globals": "^16.3.0"
   }
 }
