--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "workflow_test",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
