--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,29 @@
-name: CI Lint & Build
+name: CI
 
 on:
   push:
-    branches:
-      - develop
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - develop
-      - main
+    branches: [ main ]
 
 jobs:
-  lint-and-build:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout del código
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Configurar Node.js 18
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
 
-      - name: Instalar dependencias
-        run: npm ci
+    - name: Install dependencies
+      run: npm install
 
-      - name: Ejecutar ESLint
-        run: npm run lint
+    - name: Lint code
+      run: npm run lint
 
-      - name: Compilar proyecto
-        run: npm run build
+    - name: Build project
+      run: npm run build
